# sightly

./: CMakeLists.txt  LICENSE  index.html
assets/: index-B0SsqPJJ.css  index-BAUhSjlG.css  index-C6foj1h5.js  index-CYSb_53y.js  index-C_fNAKyr.css  index-D-sM5UIO.js
core/: CMakeLists.txt
core/include/: config.h  crosshair.h  globals.h  resources.h  window.h
core/resources/: resources.rc
core/src/: config.cpp  crosshair.cpp  main.cpp  window.cpp
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: Editor.tsx  Footer.tsx  NavBar.tsx  index.ts
web/src/lib/: crosshair.ts
